# experience-graph

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/agent-guide/: README.md  operations.md  playbooks.md  schemas.md  trace-format.md
docs/design/: architecture-design.md  context-economy-strategy.md  plan-context-economy.md  plan-pluggable-architecture.md
integrations/: __init__.py
integrations/langgraph/: README.md  __init__.py  tools.py
integrations/obsidian/: __init__.py  indexer.py  vault.py
integrations/openclaw/: README.md  SKILL.md  openclaw.example.json
src/xpgraph/: __init__.py  errors.py  mcp_server.py
src/xpgraph/core/: base.py  ids.py
src/xpgraph/mcp/: __init__.py  server.py
src/xpgraph/mutate/: __init__.py  commands.py  executor.py  policy_gate.py
src/xpgraph/retrieve/: __init__.py  effectiveness.py  formatters.py  pack_builder.py  strategies.py  token_tracker.py  token_usage.py
src/xpgraph/schemas/: __init__.py  entity.py  enums.py  evidence.py  graph.py  pack.py  policy.py  precedent.py  trace.py
src/xpgraph/stores/: __init__.py  document.py  event_log.py  graph.py  registry.py  trace.py  vector.py
src/xpgraph/stores/base/: __init__.py  event_log.py  graph.py  trace.py
src/xpgraph/stores/lancedb/: __init__.py  store.py
src/xpgraph/stores/local/: __init__.py  blob.py
src/xpgraph/stores/pgvector/: __init__.py  store.py
src/xpgraph/stores/postgres/: __init__.py  document.py  event_log.py  graph.py  trace.py
src/xpgraph/stores/s3/: __init__.py  blob.py
src/xpgraph/stores/sqlite/: __init__.py  document.py  event_log.py  graph.py  trace.py  vector.py
src/xpgraph_api/: __init__.py  app.py  deps.py  models.py
src/xpgraph_api/routes/: admin.py  curate.py  ingest.py  retrieve.py
src/xpgraph_cli/: __init__.py  admin.py  analyze.py  config.py  curate.py  ingest.py  main.py  output.py  retrieve.py  stores.py
src/xpgraph_sdk/: __init__.py  client.py  skills.py
src/xpgraph_workers/: __init__.py
src/xpgraph_workers/engine/: thinking.py
src/xpgraph_workers/enrichment/: __init__.py  service.py
src/xpgraph_workers/ingestion/: __init__.py  base.py  dbt.py  openlineage.py
src/xpgraph_workers/learning/: miner.py
src/xpgraph_workers/maintenance/: retention.py
tests/integration/: __init__.py
tests/integration/obsidian/: test_indexer.py  test_vault.py
tests/unit/: test_errors.py
tests/unit/api/: test_routes.py
tests/unit/cli/: conftest.py  test_admin.py  test_curate.py  test_ingest.py  test_retrieve.py
tests/unit/core/: test_base.py  test_ids.py
tests/unit/mutate/: test_commands.py  test_executor.py  test_policy_gate.py
tests/unit/retrieve/: test_effectiveness.py  test_formatters.py  test_pack_builder.py  test_strategies.py  test_token_tracker.py
tests/unit/schemas/: test_entity.py  test_evidence.py  test_pack.py  test_policy.py  test_precedent.py  test_trace.py
tests/unit/sdk/: test_client.py  test_skills.py
tests/unit/stores/: test_document_store.py  test_event_log.py  test_graph_store.py  test_lancedb_store.py  test_pgvector.py  test_postgres_stores.py  test_s3_blob.py  test_temporal_graph.py  test_trace_store.py  test_vector_store.py
tests/unit/workers/: test_ingestion.py
tests/unit/workers/engine/: test_thinking.py
tests/unit/workers/enrichment/: test_service.py
tests/unit/workers/learning/: test_miner.py
tests/unit/workers/maintenance/: test_retention.py
