[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "experience-graph"
dynamic = ["version"]
description = "Experience Graph — structured memory and learning for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Nathan" },
]
keywords = ["ai", "agents", "knowledge-graph", "memory", "mcp", "traces", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=23.0",
    "ulid-py>=1.1",
    "python-dateutil>=2.8",
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",
    "httpx>=0.27",
    "fastmcp>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/experience-graph/experience-graph"
Documentation = "https://github.com/experience-graph/experience-graph/tree/main/docs"
Repository = "https://github.com/experience-graph/experience-graph"
Issues = "https://github.com/experience-graph/experience-graph/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
    "pre-commit>=4.0",
]
vectors = [
    "lancedb>=0.6",
    "pyarrow",
    "pandas",
    "numpy",
]
cloud = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "pgvector>=0.3",
    "boto3>=1.34",
]
langgraph = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
]

[project.scripts]
xpg = "xpgraph_cli.main:app"
xpg-mcp = "xpgraph.mcp.server:main"
xpg-mcp-legacy = "xpgraph.mcp_server:main"
xpg-api = "xpgraph_api.app:main"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["src/xpgraph", "src/xpgraph_cli", "src/xpgraph_workers", "src/xpgraph_api", "src/xpgraph_sdk"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "F", "B", "W", "I", "N", "UP", "ANN", "S", "C4",
    "DTZ", "T10", "EM", "ISC", "ICN", "LOG", "G", "PIE", "PT",
    "RET", "SIM", "TCH", "ARG", "PTH", "ERA", "PL", "TRY",
    "FLY", "PERF", "FURB", "RUF",
]
ignore = [
    "ANN401",  # dynamically typed expressions (Any)
    "S101",    # use of assert (ok in tests)
    "PLR0913", # too many arguments
    "TC001",   # move import into TYPE_CHECKING block
    "TC003",   # move stdlib import into TYPE_CHECKING block
    "RUF022",  # __all__ not sorted
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "PLR2004", "ARG001", "ARG002", "ARG005", "PT011", "PLC0415"]
"src/xpgraph/stores/**/*.py" = ["S608", "S105"]  # parameterized SQL is safe; TOKEN_TRACKED is not a password
"src/xpgraph/stores/registry.py" = ["PLR0912"]  # _instantiate has many backend branches
"src/xpgraph/mutate/executor.py" = ["PLR0911"]  # pipeline method has many return points
"src/xpgraph/mcp_server.py" = ["PLR0911"]  # many return paths in tool handlers
"src/xpgraph/mcp/**/*.py" = ["PLR0911"]  # many return paths in tool handlers
"src/xpgraph_api/**/*.py" = ["PLR0911"]  # routes may have many return paths

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "xpgraph._version",
    "numpy", "numpy.*",
    "lancedb", "lancedb.*",
    "pyarrow", "pyarrow.*",
    "psycopg", "psycopg.*",
    "pgvector", "pgvector.*",
    "boto3", "boto3.*",
    "botocore", "botocore.*",
    "fastmcp", "fastmcp.*",
    "fastapi", "fastapi.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
pythonpath = ["src", "."]
